--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1186,9 +1186,11 @@ p.demo_store {
       overflow-y: auto;
       padding: 2px 0; }
   .main-navigation .shopping-cart .shopping-cart-link {
+    display: block;
     line-height: 0;
-    position: relative;
-    vertical-align: middle; }
+    margin: -15px;
+    padding: 15px;
+    position: relative; }
     .main-navigation .shopping-cart .shopping-cart-link .shopping-cart-text {
       display: none; }
     .main-navigation .shopping-cart .shopping-cart-link .shopping-cart-count {
@@ -1200,7 +1202,7 @@ p.demo_store {
       font-size: 11px;
       line-height: 19px;
       position: absolute;
-      right: -11px;
+      right: 4px;
       text-align: center;
       width: 20px; }
     .main-navigation .shopping-cart .shopping-cart-link .svg-icon-cart path {
