Set mini-cart count position
Resolves #265.

--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -417,6 +417,7 @@
 				line-height: 19px;
 				position: absolute;
 				right: 4px;
+				top: 15px;
 				text-align: center;
 				width: 20px;
 			}
