--- a/style.css
+++ b/style.css
@@ -3130,7 +3130,9 @@ a {
   margin: 0 0 8px;
   overflow: auto; }
   #commentform .comment-subscription-form input {
-    margin-right: 0; }
+    margin-right: 0;
+    position: relative;
+    top: -1px; }
   #commentform .comment-subscription-form label {
     font-weight: normal; }
 
