--- a/style.css
+++ b/style.css
@@ -459,8 +459,8 @@ input[type="submit"],
 .woocommerce #respond input#submit,
 .woocommerce a.button,
 .woocommerce button.button,
-.woocommerce #page #infinite-handle span button, #page #infinite-handle span
-.woocommerce button,
+.woocommerce #page #infinite-handle span button,
+#page #infinite-handle span .woocommerce button,
 .woocommerce input.button,
 .woocommerce.single-product .cart button {
   background: #fff;
@@ -486,8 +486,8 @@ input[type="submit"],
   .woocommerce #respond input#submit:hover,
   .woocommerce a.button:hover,
   .woocommerce button.button:hover,
-  .woocommerce #page #infinite-handle span button:hover, #page #infinite-handle span
-  .woocommerce button:hover,
+  .woocommerce #page #infinite-handle span button:hover,
+  #page #infinite-handle span .woocommerce button:hover,
   .woocommerce input.button:hover,
   .woocommerce.single-product .cart button:hover {
     background: #fff;
@@ -507,11 +507,11 @@ input[type="submit"],
   .woocommerce a.button:active,
   .woocommerce a.button:focus,
   .woocommerce button.button:active,
-  .woocommerce #page #infinite-handle span button:active, #page #infinite-handle span
-  .woocommerce button:active,
+  .woocommerce #page #infinite-handle span button:active,
+  #page #infinite-handle span .woocommerce button:active,
   .woocommerce button.button:focus,
-  .woocommerce #page #infinite-handle span button:focus, #page #infinite-handle span
-  .woocommerce button:focus,
+  .woocommerce #page #infinite-handle span button:focus,
+  #page #infinite-handle span .woocommerce button:focus,
   .woocommerce input.button:active,
   .woocommerce input.button:focus,
   .woocommerce.single-product .cart button:active,
