Added mini cart item right padding
Resolves #272.

--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -490,7 +490,7 @@
 				box-sizing: border-box;
 				@include clearfix;
 				margin: 0 0 13px 0;
-				padding: 0 0 13px 0;
+				padding: 0 30px 13px 0;
 				position: relative;
 				text-align: left;
 
