--- a/sass/woocommerce/_cart.scss
+++ b/sass/woocommerce/_cart.scss
@@ -472,7 +472,9 @@
 }
 
 .mega-menu-primary {
+
 	.main-navigation {
+
 		#mega-menu-wrap-primary {
 			display: inline-block;
 		}
@@ -569,7 +571,8 @@
 			border-top: none !important;
 			color: $color__text-medium;
 			font-size: 14px;
-			margin: 14px 0 0 0;
+			line-height: 1.8666;
+			margin: 14px 0 !important;
 			padding: 5px 0 !important;
 			text-align: left;
 
@@ -584,12 +587,13 @@
 		}
 
 		.buttons {
-			margin: 14px 0 0 0;
+			margin: 0;
 			padding-top: 0;
 			text-align: center;
 			text-transform: uppercase;
 
 			a {
+				display: inline-block;
 				font-weight: normal;
 				padding: 12px 1.5em;
 				width: 49%;
