Corrected notice button hover color

--- a/sass/woocommerce/_notifications.scss
+++ b/sass/woocommerce/_notifications.scss
@@ -47,3 +47,10 @@ p.demo_store {
 		margin-top: 0;
 	}
 }
+
+.woocommerce .woocommerce-notices-wrapper {
+
+	a.button:hover {
+		color: #fff;
+	}
+}
