Updated declaration order

--- a/woocommerce.css
+++ b/woocommerce.css
@@ -1285,10 +1285,10 @@ p.demo_store {
       color: #24c48a; }
   .woocommerce .widget_shopping_cart_content .cart_list .mini_cart_item img {
     float: left;
+    height: auto;
     margin-right: 10px;
     vertical-align: middle;
-    width: 64px;
-    height: auto; }
+    width: 64px; }
   .woocommerce .widget_shopping_cart_content .cart_list .mini_cart_item .quantity {
     display: block;
     font-size: 14px;
