--- a/woocommerce.css
+++ b/woocommerce.css
@@ -79,6 +79,9 @@ p.demo_store {
   .woocommerce-demo-store #page {
     margin-top: 0; } }
 
+.woocommerce .woocommerce-notices-wrapper .woocommerce-message {
+  line-height: 41px; }
+
 .woocommerce .woocommerce-notices-wrapper a.button:hover, .woocommerce .woocommerce-notices-wrapper a.button:active, .woocommerce .woocommerce-notices-wrapper a.button:focus {
   color: #fff; }
 
