--- a/woocommerce.css
+++ b/woocommerce.css
@@ -338,11 +338,11 @@ p.demo_store {
   .woocommerce ul.products li.product .loop-product-thumbnail {
     background: #00a76a;
     position: relative; }
-    .woocommerce ul.products li.product .loop-product-thumbnail:hover img {
+    .unwind-add-to-cart.woocommerce ul.products li.product .loop-product-thumbnail:hover img {
       opacity: 0.25; }
-      .is_mobile.woocommerce ul.products li.product .loop-product-thumbnail:hover img {
-        opacity: 1;
-        visibility: visible; }
+    .unwind-add-to-cart.is_mobile.woocommerce ul.products li.product .loop-product-thumbnail:hover img {
+      opacity: 1;
+      visibility: visible; }
     .woocommerce ul.products li.product .loop-product-thumbnail:hover .add_to_cart_button,
     .woocommerce ul.products li.product .loop-product-thumbnail:hover .product-quick-view-button,
     .woocommerce ul.products li.product .loop-product-thumbnail:hover .product_type_grouped,
