--- a/sass/site/header/_masthead.scss
+++ b/sass/site/header/_masthead.scss
@@ -78,7 +78,7 @@
 		> .container {
 			align-items: center;
 			display: flex;
-			height: 60px;
+			min-height: 60px;
 			justify-content: space-between;
 		}
 	}
