--- a/woocommerce.css
+++ b/woocommerce.css
@@ -343,9 +343,9 @@ p.demo_store {
   .woocommerce ul.products li.product .loop-product-thumbnail {
     background: #00a76a;
     position: relative; }
-    .unwind-add-to-cart.woocommerce ul.products li.product .loop-product-thumbnail:hover img {
+    .unwind-product-overlay ul.products li.product .loop-product-thumbnail:hover img {
       opacity: 0.25; }
-    .unwind-add-to-cart.is_mobile.woocommerce ul.products li.product .loop-product-thumbnail:hover img {
+    .unwind-product-overlay.is_mobile ul.products li.product .loop-product-thumbnail:hover img {
       opacity: 1;
       visibility: visible; }
     .woocommerce ul.products li.product .loop-product-thumbnail:hover .add_to_cart_button,
